changed width of some divs, home page was not aligned correctly, still not, need to work on that later and some divs have bg color added, will remove later

--- a/src/App.css
+++ b/src/App.css
@@ -12,3 +12,7 @@ body {
   --light-bg: #002f3408;
   --light-border: lightgrey;
 }
+.app {
+  width: 100vw;
+  height: 100vh;
+}
