--- a/src/Pages/Home.css
+++ b/src/Pages/Home.css
@@ -1,3 +1,4 @@
 .homeParentDiv {
   width: 100%;
+  background-color: aqua;
 }
